
clFFT Contents
--------------
The clFFT library is an open source OpenCL library
implementation of discrete Fast Fourier Transforms. It:

* Provides a fast and accurate platform for calculating
  discrete FFTs
* Supports 1D, 2D, and 3D transforms with a batch size
  that can be greater than 1
* Supports planar (real and complex components in
  separate arrays) and interleaved (real and complex
  components as a pair contiguous in memory) formats
* Supports dimension lengths that can be any mix of
  powers of 2, 3, and 5
* Supports single and double precision floating-point
  formats
* Supports in-place or out-of-place transforms


clFFT - Release Notes - version 2.7
--------------------------------------

New features of this release:

* Support for power-of-7 size transforms
* Pre-callback feature that enables custom pre-processing
  of input data directly by the library with user callback function
* Support for 1D large size transforms with no extra memory allocation
  requirement for certain sizes

Driver notes:

* This library version has been tested with Catalyst
  Pro driver version 14.502 on Firepro W9100.


clFFT - Release Notes - version 2.6.1
--------------------------------------

This is a patch update release to v2.6.0. It has the following.

* Fix for client application crash with Linux 14.502 driver
* Performance fixes for real forward and backward transform when
  enabling ECC
* Performance fixes for complex transforms over a small range in
  power-of-2 sizes
* Improvement in API timing in client
* Several minor enhancements and bug fixes

Driver notes:

* This library version has been tested with Catalyst
  Pro driver version 14.502 on Firepro W9100.


clFFT - Release Notes - version 2.6.0
--------------------------------------

New features of this release:

* Significant uplift of 1D real forward transform
  performance for power-of-2 sizes
* Significant uplift of large 2D/3D real transform
  performance for power-of-2 sizes

Known issues:
