@@ -40,7 +40,7 @@ if( NOT DEFINED CLFFT_VERSION_MAJOR )
 endif( )
 
 if( NOT DEFINED CLFFT_VERSION_MINOR )
-    set( CLFFT_VERSION_MINOR 7 )
+    set( CLFFT_VERSION_MINOR 8 )
 endif( )
 
 if( NOT DEFINED CLFFT_VERSION_PATCH )
